[feat] add invoice and fixed testing.